testsuite/tests/rename/should_fail/rnfail022.stderr

rnfail022.hs:8:5: error:
    Variable not in scope: intersperse
    Suggested fix:
      Perhaps use ‘L.intersperse’ (imported from Data.List)
